Add transaction predicate map and support classes